--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "styled-component",
     "frontend",
     "javascript",
-    "api"
+    "typescript"
   ],
   "browserslist": [
     "defaults",
